[package]
name = "warp-protobuf"
description = "Protobuf support for the Rust web framework, warp"
version = "0.1.0"
authors = ["Parker Timmerman <parker@parkertimmerman.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ParkMyCar/warp-protobuf"
homepage = "https://github.com/ParkMyCar/warp-protobuf"
keywords = ["rust", "protobuf", "warp", "server", "http"]
categories = ["web-programming"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.3"
log = "0.4.8"
prost = "0.6.1"
warp = "0.2.1"
